# Images_process

./: CMakeLists.txt  README.md  cut_out.cpp  cut_paste.cpp  flip.cpp  main.cpp
